--- a/app/globals.css
+++ b/app/globals.css
@@ -242,3 +242,27 @@ body {
   top:0;
   left:0;
 }
+
+.uploadimgfield {
+  display: flex;
+  border: 1px solid rgb(139, 139, 139);
+  color:gray;
+  border-radius: 15px;
+  background-color: transparent;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  height: 150px;
+  cursor: pointer;
+  text-transform: uppercase;
+  position: relative;
+}
+
+.thumbnail-preview {
+  position: absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  border-radius: 10px;
+}
