--- a/app/globals.css
+++ b/app/globals.css
@@ -266,3 +266,71 @@ body {
   height:100%;
   border-radius: 10px;
 }
+
+/* pagination */
+
+.listing-overall {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.pagination-container {
+  display: flex;
+  flex-wrap: nowrap;
+  gap:1rem;
+  /* position: absolute; */
+}
+
+.listing-container {
+  border: 1px solid blue;
+  display: grid;
+  grid-gap:1em;
+  padding:0.5em;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  /* grid-template-columns: repeat(autofit,minmax(250px,1fr)); */
+}
+
+.listing-card {
+  border: 1px solid red;
+  position: relative;
+  height: 340px;
+}
+
+.heart {
+  border: 1px solid green;
+  position: absolute;
+  right:0;
+  padding: 2px;
+  margin: 5px;
+}
+
+.listing-card {
+
+}
+
+.listing-content {
+  border: 1px solid orange;
+  display: flex;
+}
+
+.text-content {
+  border: 1px solid white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.text-content-inner > h2 {
+  font-size: 1.7rem;
+  font-weight: 700;
+}
+
+.price {
+  font-style:italic;
+}
+
+/* pagination */
