--- a/app/globals.css
+++ b/app/globals.css
@@ -351,6 +351,13 @@ body {
   z-index: 50;
   bottom: 20px;
   opacity:0.5;
+  transition: all 0.5s ease;
+}
+
+.heart:hover {
+  opacity: 1;
+  scale: 1.2;
+  cursor: pointer;
 }
 
 .addtobasket {
@@ -359,6 +366,13 @@ body {
   bottom: 22px;
   left: 50px;
   opacity:0.5;
+  transition: all 0.2s ease;
+}
+
+.addtobasket:hover {
+  opacity: 1;
+  scale: 1.2;
+  cursor: pointer;
 }
 
 /* pagination2 https://uiverse.io/Sashank02/new-warthog-10 */
