completes profile feed

--- a/app/globals.css
+++ b/app/globals.css
@@ -297,6 +297,17 @@ body {
   /* grid-template-columns: repeat(autofit,minmax(250px,1fr)); */
 }
 
+.listing-container-one-row {
+    /* border: 1px solid blue; */
+    margin-bottom: 20px;
+    display: grid;
+    grid-gap:1em;
+    padding:0.5em;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    /* grid-template-columns: repeat(autofit,minmax(250px,1fr)); */
+}
+
 .listing-card {
   /* background: rgb(255,255,255); */
   /* background: linear-gradient(30deg, rgba(255, 255, 255, 0.671) 0%, rgba(255, 234, 218, 0.603) 100%); */
@@ -561,6 +572,10 @@ body {
   gap:10px;
 }
 
+.profile-listing-feed {
+  margin-top:20px;
+}
+
 /* profile page */
 
 /* --------------------------- https://loading.io/css/----------------------------*/
@@ -629,17 +644,17 @@ body {
 }
 /* --------------------------- https://loading.io/css/----------------------------*/
 
-
+/* 
 
 @media (max-height: 950px) {
   .listing-container {
-    /* border: 1px solid blue; */
+    border: 1px solid blue;
     margin-bottom: 20px;
     display: grid;
     grid-gap:1em;
     padding:0.5em;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr;
-    /* grid-template-columns: repeat(autofit,minmax(250px,1fr)); */
+    grid-template-columns: repeat(autofit,minmax(250px,1fr));
   }
-}
+} */
