--- a/app/globals.css
+++ b/app/globals.css
@@ -663,17 +663,17 @@ body {
 }
 /* --------------------------- https://loading.io/css/----------------------------*/
 
-/* 
+
 
 @media (max-height: 950px) {
   .listing-container {
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     margin-bottom: 20px;
     display: grid;
     grid-gap:1em;
     padding:0.5em;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr;
-    grid-template-columns: repeat(autofit,minmax(250px,1fr));
+    /* grid-template-columns: repeat(autofit,minmax(250px,1fr)); */
   }
-} */
+}
