--- a/app/globals.css
+++ b/app/globals.css
@@ -511,6 +511,12 @@ body {
   gap:1.5rem;
 }
 
+.indiv {
+  background-color: #b7ccfa33;
+  padding:30px;
+  border-radius: 20px;
+}
+
 .content-container > button {
   border: 1px solid #F47174;
   padding:5px;
