--- a/app/globals.css
+++ b/app/globals.css
@@ -696,6 +696,21 @@ body {
   font-size: 0.8rem;
 }
 
+.checkout-button {
+  border: 1px solid #F47174;
+  padding:5px 10px;
+  border-radius: 5px;
+  transition: all 200ms ease;
+}
+
+.checkout-button:hover {
+  background-color: #F47174;
+  color:white;
+  border: 1px solid #F47174;
+  padding:5px 10px;
+  border-radius: 5px;
+}
+
 @media (max-height: 950px) {
   .listing-container {
     /* border: 1px solid blue; */
