--- a/app/globals.css
+++ b/app/globals.css
@@ -394,6 +394,23 @@ body {
   transition: all 0.2s ease;
 }
 
+.sold {
+  position: absolute;
+  z-index: 50;
+  top:30px;
+  left: 30px;
+  opacity:0.5;
+}
+
+.sold-text {
+  /* color: #F47174; */
+  color:white;
+  font-weight: 800;
+  background-color: red;
+  padding:2px 7px;
+  border-radius: 10px;
+}
+
 .addtobasket:hover {
   opacity: 1;
   scale: 1.2;
